2006-10-28  Doug Hellmann  <dhellmann@racemi.com>

	* static/js/oneoffcast/user.js (show_queue_callback): Change
	description to summary.
	(do_add_to_queue): Pull data from the most recently scanned feed
	and post it to the queue to add an item.
	(populate_feed_viewer): Instead of using a form, just refer to a
	global array of feed entries.

2006-10-24  Doug Hellmann  <dhellmann@racemi.com>

	* static/js/oneoffcast/user.js (do_add_to_queue): Call the server
	to add the item to the queue.
	(add_to_queue_callback): Handle response from the server.

	* static/css/site.css: Remove underline from links in
	podcast_entry divs.

2006-10-22  Doug Hellmann  <dhellmann@racemi.com>

	* static/js/oneoffcast/user.js: Add icons to list of feeds and
	feed_viewer.

	* static/css/site.css: Add styles for the list of podcasts.

	* static/js/oneoffcast/user.js (insert_feed_into_list): Do not
	insert the item if it already exists in the list.
	(populate_feed_viewer): New function to show the contents of a
	feed in the feed_viewer node.
	(show_feed_by_id): Request the feed contents.
	(show_feed_by_id_callback): Display the feed contents.
	Fiddle around with calls to hide/show the feed_viewer.
	More error handling changes.

	* static/css/site.css: Add styles for the feed_viewer section of
	the user page.

	* static/js/oneoffcast/user.js: Change feedlist to feed_list.

2006-10-21  Doug Hellmann  <dhellmann@racemi.com>

	* static/js/oneoffcast/user.js: If the queue is empty, show that.
	Break out the code to display a feed in the list.

	* settings.py: Add some settings used for email in the
	registration code.

	* templates/base.html: Add a head block.

	* static/js/oneoffcast/user.js: Add functions to deal with the queue.

	* static/css/site.css: Update the queue class styles.

2006-10-08  Doug Hellmann  <dhellmann@racemi.com>

	* templates/base.html: Add more dojo.require calls.
	Add functions for showing error messages.

2006-10-05  Doug Hellmann  <dhellmann@racemi.com>
